@@ -1,3 +1,8 @@
+2009-07-12  Guanpeng Xu  <herberteuler@hotmail.com>
+
+	* pcomplete.el (pcomplete-comint-setup): Check for
+	shell-dynamic-complete-filename too.
+
 2009-07-11  Kenichi Handa  <handa@m17n.org>
 
 	* international/mule-diag.el (describe-character-set): Don't show
